--- a/package.json
+++ b/package.json
@@ -1,30 +1,26 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "main": "index.js",
-  "directories": {
-    "lib": "lib"
+  "name": "dreambody-server",
+  "version": "0.1.0",
+  "bin": {
+    "dreambody-server": "bin/dreambody-server.js"
   },
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
-    "cdk": "cdk",
-    "deploy": "cdk deploy",
-    "synth": "cdk synth"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "@aws-cdk/aws-appsync-alpha": "^2.59.0-alpha.0",
-    "aws-cdk-lib": "^2.80.0",
-    "aws-sdk": "^2.1399.0",
-    "constructs": "^10.2.68",
-    "typescript": "^5.0.4"
+    "test": "jest",
+    "cdk": "cdk"
   },
   "devDependencies": {
-    "@types/node": "^20.2.5",
-    "aws-cdk": "^2.80.0"
+    "@types/jest": "^29.5.14",
+    "@types/node": "22.7.9",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
+    "aws-cdk": "2.1021.0",
+    "ts-node": "^10.9.2",
+    "typescript": "~5.6.3"
+  },
+  "dependencies": {
+    "aws-cdk-lib": "2.205.0",
+    "constructs": "^10.0.0"
   }
 }
