--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
     "dreambody-server": "bin/dreambody-server.js"
   },
   "scripts": {
+    "lint:schema": "graphql-schema-linter --rules recommended graphql/schema.graphql",
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "cdk"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.152",
     "@types/jest": "^29.5.14",
     "@types/node": "22.7.9",
     "aws-cdk": "2.1021.0",
+    "graphql-schema-linter": "^3.0.1",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
@@ -21,7 +24,9 @@
   },
   "dependencies": {
     "@aws-cdk/aws-appsync-alpha": "^2.59.0-alpha.0",
-    "aws-cdk-lib": "^2.205.0",
+    "@aws-sdk/client-dynamodb": "^3.848.0",
+    "@aws-sdk/lib-dynamodb": "^3.850.0",
+    "aws-cdk-lib": "^2.206.0",
     "aws-sdk": "^2.1692.0",
     "constructs": "^10.4.2"
   }
