github actions and refactor cdk

--- a/cdk/tsconfig.json
+++ b/cdk/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ES2022",
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
-    "lib": ["ES2022", "DOM"],
+    "lib": ["ES2022"],
     "types": ["node"],
     "strict": true,
     "noImplicitAny": true,
@@ -22,5 +22,6 @@
     "noEmit": true,
     "skipLibCheck": true
   },
+  "include": ["bin/**/*.ts", "lib/**/*.ts"],
   "exclude": ["node_modules", "cdk.out"]
 }
