--- a/cdk/lambda/tsconfig.json
+++ b/cdk/lambda/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
-    "lib": ["ES2020"],
+    "lib": ["es2020", "dom"],
+    "declaration": true,
     "strict": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
@@ -16,8 +17,12 @@
     "inlineSources": true,
     "experimentalDecorators": true,
     "strictPropertyInitialization": false,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
     "outDir": "dist",
-    "esModuleInterop": true
+    "rootDir": "."
   },
+  "include": ["**/*.ts"],
   "exclude": ["node_modules", "dist"]
 }
