--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "dreambody-server",
   "version": "0.1.0",
+  "type": "module",
   "bin": {
     "dreambody-server": "cdk/bin/dreambody-server.js"
   },
@@ -16,7 +17,8 @@
     "test:infrastructure": "vitest run cdk/lib/__tests__/",
     "cdk": "cdk",
     "verify": "npm run lint:schema && tsc --noEmit && cd cdk && tsc --noEmit",
-    "preDeploy": "npm run verify && cd cdk && npm run build && npm run synth"
+    "preDeploy": "npm run verify && cd cdk && npm run build && npm run synth",
+    "test:api": "node scripts/e2e/test-client.js"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.152",
@@ -45,6 +47,8 @@
     "aws-cdk-lib": "^2.206.0",
     "aws-sdk": "^2.1692.0",
     "constructs": "^10.4.2",
+    "graphql": "^16.11.0",
+    "graphql-request": "^7.2.0",
     "uuid": "^11.1.0"
   }
 }
