--- a/cdk/package.json
+++ b/cdk/package.json
@@ -14,10 +14,11 @@
   },
   "dependencies": {
     "@aws-cdk/aws-appsync-alpha": "^2.59.0-alpha.0",
+    "@aws-cdk/aws-lambda-nodejs": "^1.203.0",
     "@aws-lambda-powertools/logger": "^2.24.1",
-    "aws-cdk-lib": "^2.208.0",
+    "aws-cdk-lib": "^2.210.0",
     "aws-lambda": "^1.0.7",
-    "constructs": "^10.0.0",
+    "constructs": "^10.4.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
@@ -25,6 +26,7 @@
     "@types/jest": "^29.5.10",
     "@types/node": "^24.1.0",
     "@types/uuid": "^9.0.7",
+    "esbuild": "^0.21.5",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
