--- a/cdk/package.json
+++ b/cdk/package.json
@@ -16,6 +16,7 @@
     "@aws-cdk/aws-appsync-alpha": "^2.59.0-alpha.0",
     "@aws-cdk/aws-lambda-nodejs": "^1.203.0",
     "@aws-lambda-powertools/logger": "^2.24.1",
+    "@smithy/service-error-classification": "^4.0.7",
     "aws-cdk-lib": "^2.210.0",
     "aws-lambda": "^1.0.7",
     "constructs": "^10.4.2",
